# habitt-backend

./: .gitignore  Dockerfile  README.rst  docker-compose.yml  main.py  pyproject.toml
habitt/config/: database.py  settings.py
habitt/models/: model.py
habitt/pydantic/: schema.py
habitt/routers/: auth.py  deepwork.py  user.py
habitt/services/: auth.py  deepwork.py  mailer.py  user.py
tests/: test_habitt.py
